Remove now unused code and make use of new language features